[package]
name = "party_invites"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
diesel = { version = "2.1.0", features = ["postgres"] }
dotenv = "0.15.0"
twilio = "1.0.2"
jsonwebtoken = "8.3.0"
lettre = "0.10.0-beta.3"
